* Support authentication services

Version 6.4.5 - 2022-09-06
* Bug fixes (see mercurial logs for details)

Version 6.4.4 - 2022-08-17
* Bug fixes (see mercurial logs for details)

Version 6.4.3 - 2022-07-01
* Bug fixes (see mercurial logs for details)

Version 6.4.2 - 2022-06-15
* Bug fixes (see mercurial logs for details)

Version 6.4.1 - 2022-06-03
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
* Bug fixes (see mercurial logs for details)
* Support notification message
* Allow Reference to be edited from tree view
* Set ECMAScript version to 6
* Manage optional column
* Display the number of selected records
* Humanize the count result
* Add limit to search_count
* Call view_get for board view
* Limit board action domain to active id and ids
* Manage creatable attribute of view

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)
* Support grouping attribute
* Add expander on tree to fold or unfold selected rows
* Support monetary and symbol field attributes
* Support digits from relation field
* Add accesskey to widgets and buttons
* Support Binary field in CSV import/export

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Use appropriate types for email and url widgets
* Add completion on xxx2Many and Dict
* Add attachment preview
* Support document widget
* Support icon of type URL
* Allow sending email with existing attachments
* Add paths and model context to action data
* Add indentation in CSV export of tree
* Manage which records to use for actions
* Add drag and drop on CSV export and import
* Remove tempusdominus dependency
* Handle device cookie
* Add breadcrumb as title of window form
* Manage help for each selection
* Display revision on dialog
* Support empty value for timedelta converter
* Unify PYSON string format

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Format timedelta in CSV export
* Manage symbol widget
* Fallback to model name as title