@@ -2193,8 +2193,13 @@
                             view.children_field || null] = [
                                 [], [[this.current_record.id]]];
                     }
-                } else if (view.view_type == 'tree') {
-                    var paths = view.get_expanded_paths();
+                } else if (~['tree', 'list-form'].indexOf(view.view_type)) {
+                    var paths;
+                    if (view.view_type == 'tree') {
+                        paths = view.get_expanded_paths();
+                    } else {
+                        paths = [];
+                    }
                     var selected_paths = view.get_selected_paths();
                     if (!(parent_ in this.tree_states)) {
                         this.tree_states[parent_] = {};
@@ -2231,7 +2236,7 @@
         set_tree_state: function() {
             var parent_, state, state_prm, tree_state_model;
             var view = this.current_view;
-            if (!~['tree', 'form'].indexOf(view.view_type)) {
+            if (!~['tree', 'form', 'list-form'].indexOf(view.view_type)) {
                 return jQuery.when();
             }
 
@@ -2242,7 +2247,8 @@
                     !jQuery.isEmptyObject(this.tree_states_done)) {
                 return jQuery.when();
             }
-            if (view.view_type == 'tree' && !view.attributes.tree_state) {
+            if ((~['tree', 'list-form'].indexOf(view.view_type)) &&
+                !view.attributes.tree_state) {
                 this.tree_states_done.push(view);
             }
 
@@ -2283,6 +2289,8 @@
                 selected_nodes = state[1];
                 if (view.view_type == 'tree') {
                     return view.display(selected_nodes, expanded_nodes);
+                } else if (view.view_type == 'list-form') {
+                    return view.display(selected_nodes);
                 } else {
                     if (!jQuery.isEmptyObject(selected_nodes)) {
                         for (const id of selected_nodes[0]) {
